@@ -50,13 +50,7 @@ public class PatternReplaceCharFilterFactory extends CharFilterFactory {
   @Override
   public void init(Map<String, String> args) {
     super.init( args );
-    try {
-      p = Pattern.compile(args.get("pattern"));
-    } catch (PatternSyntaxException e) {
-      throw new InitializationException
-        ("Configuration Error: 'pattern' can not be parsed in " +
-         this.getClass().getName(), e);
-    }
+    p = getPattern("pattern");
     replacement = args.get( "replacement" );
     if( replacement == null )
       replacement = "";
